CSS: Fix collapsed sidebar

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -249,7 +249,6 @@ html.no-js .controls > .tabs {
   }
 
   #sidebar {
-    top: 2.25em;
     width: 3em;
   }
 
